--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <main>
     <article class="intro">
       <div class="intro-conteiner conteiner-base">
-        <div class="text-content">
+        <div class="intro-text-content">
           <h1 class="w font-1-xxl">Bicicletas feitas
             sob medidas<span class="ponto p1">.</span></h1>
           <p class="font-2-l c5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
@@ -71,6 +71,33 @@
         </ul>
       </div>
     </article>
+    <section class="tecnologias c11-b">
+      <div class="conteiner-base conteiner-tec">
+        <div class="text-content">
+          <div class="descricao">
+            <span class="c5 font-2-l-b">TECNOLOGIA AVANÇADA</span>
+            <h2 class="font-1-xxl w">você escolhe as suas cores e componentes<span class="ponto p1">.</span></h2>
+            <p class="c5 font-2-l">Cada Bikcraft é um e possui a sua identidade.<br>As medidas serão exatas para o seu corpo e altura, garantindo maior confroto e ergonomia na sua pedalada. Você pode também personalizar completamente suas cores</p>
+            <a href="" class="link p1">ESCOLHA UM MODELO</a>
+          </div>
+          <div class="tec-vantagens">
+            <div class="coluna">
+              <img src="./img/icones/eletrica.svg" alt="motor-eletrico">
+              <h3 class="font-1-m w">Motor Elétrico</h3>
+              <p class="c5 font-2-s">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com sua energia gasta ao pedalar.</p>
+            </div>
+            <div class="coluna">
+              <img src="./img/icones/rastreador.svg" alt="rastreador">
+              <h3 class="font-1-m w">Rastreador</h3>
+              <p class="c5 font-2-s">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+            </div>
+          </div>
+        </div>
+        <div class="imagem-tec">
+          <img src="./img/fotos/tecnologia.jpg" alt="ferramentas-img">
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
