--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </ul>
       </div>
     </article>
-    <section class="tecnologias c11-b">
+    <section class="tecnologias c11-b" aria-label="tecnologia avançada">
       <div class="conteiner-base conteiner-tec">
         <div class="text-content">
           <div class="descricao">
@@ -97,6 +97,19 @@
           <img src="./img/fotos/tecnologia.jpg" alt="ferramentas-img">
         </div>
       </div>
+    </section>
+    <section class="parceiros conteiner-base" aria-label="nossos parceiros">
+      <h2 class="font-1-xxl c12">nossos parceiros<span class="ponto p1">.</span></h2>
+      <ul class="lista-parceiros">
+        <li><img src="./img/parceiros/caravan.svg" alt="caravan"></li>
+        <li><img src="./img/parceiros/ranek.svg" alt="ranek"></li>
+        <li><img src="./img/parceiros/handel.svg" alt="handel"></li>
+        <li><img src="./img/parceiros/dogs.svg" alt="dogs"></li>
+        <li><img src="./img/parceiros/lescone.svg" alt="lescone"></li>
+        <li><img src="./img/parceiros/flexblog.svg" alt="flexblog"></li>
+        <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+        <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
+      </ul>
     </section>
   </main>
 </body>
