add new section
nova seção de depoimento adicionada.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./estilos/style.css">
   <title>Bikcraft - Bicicletas Elétricas</title>
 </head>
@@ -110,6 +113,19 @@
         <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
         <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
       </ul>
+    </section>
+    <section class="depoimento" aria-label="depoimento">
+      <div class="depoimento-conteiner">
+        <div class="img-depoimento">
+          <img src="./img/fotos/depoimento.jpg" alt="mulher andando de bicicleta">
+        </div>
+        <div class="depoimento-texto">
+          <blockquote cite="Ana Júlia" class="citacao p5">
+            <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+            <span class="autor p4">Ana Julia</span>
+          </blockquote>
+        </div>
+      </div>
     </section>
   </main>
 </body>
