add new section
Adicionada seção sobre os seguros.

--- a/index.html
+++ b/index.html
@@ -127,6 +127,55 @@
         </div>
       </div>
     </section>
+    <section class="seguros" aria-label="seguros">
+      <div class="conteiner-seguros conteiner-base">
+        <h2 class="font-1-xxl w">seguros<span class="ponto p1">.</span></h2>
+        <div class="card c12-b">
+          <h3 class="font-1-p c6">PRATA</h3>
+          <span class="font-1-xl w">R$ 199<span class="font-1-xs c6">mensal</span></span>
+          <ul class="lista-vantagens">
+            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+              <p>Duas trocas por ano</p>
+            </li>
+            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+              <p>Assistência técnica</p>
+            </li>
+            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+              <p>Suporte 08h às 18h</p>
+            </li>
+            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+              <p>Cobertura estadual</p>
+            </li>
+          </ul>
+          <a href="" class="c10-b w">INSCREVA-SE</a>
+        </div>
+        <div class="card c12-b">
+          <h3 class="font-1-p p1">OURO</h3>
+          <span class="font-1-xl w">R$ 299<span class="font-1-xs c6">mensal</span></span>
+          <ul class="lista-vantagens">
+            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+              <p>Cinco trocas por ano</p>
+            </li>
+            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+              <p>Assistência especial</p>
+            </li>
+            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+              <p>Suporte 24h</p>
+            </li>
+            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+              <p>Cobertura nacional</p>
+            </li>
+            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+              <p>Desconto em parceiros</p>
+            </li>
+            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+              <p>Acesso ao Clube Bikcraft</p>
+            </li>
+          </ul>
+          <a href="" class="ouro c12">INSCREVA-SE</a>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
