--- a/index.html
+++ b/index.html
@@ -177,6 +177,41 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="conteiner-footer conteiner-base">
+      <div class="titulo-footer">
+        <img src="./img/bikcraft.svg" alt="">
+      </div>
+      <div class="contatos w">
+        <h3 class="font-2-l-b">CONTATO</h3>
+        <div class="contato">
+          <a href="tel:+55 21 9999-9999" class="c5 font-2-m">+55 21 9999-9999</a>
+          <a href="mailto:contato@bikcraft.com" class="c5 font-2-m">contato@bikcraft.com</a>
+        </div>
+        <div class="endereco c5 font-2-m">
+          <p>Rua Ali Perto, 42 - Botafogo</p>
+          <p>Rio de Janeiro - RJ</p>
+        </div>
+        <div class="social">
+          <a href="#" title="instagram"><img src="./img/redes/instagram.svg" alt=""></a>
+          <a href="#" title="facebook"><img src="./img/redes/facebook.svg" alt=""></a>
+          <a href="#" title="youtube"><img src="./img/redes/youtube.svg" alt=""></a>
+        </div>
+      </div>
+      <div class="informacoes">
+        <h3 class="w font-2-l-b">INFORMAÇÕES</h3>
+        <ul>
+          <li><a href="#" class="c5 font-2-m">Bicicletas</a></li>
+          <li><a href="#" class="c5 font-2-m">Seguros</a></li>
+          <li><a href="#" class="c5 font-2-m">Contato</a></li>
+          <li><a href="#" class="c5 font-2-m">Termos e Condições</a></li>
+        </ul>
+      </div>
+      <div class="copyrigth">
+        <p class="c5 font-2-m">Bikcraft © Alguns direitos reservados.</p>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
