--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -22,7 +22,7 @@
 <body>
   <header class="header c12-b">
     <div class="header-conteiner conteiner-base">
-      <a href="#"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
+      <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
       <nav aria-label="primaria">
         <ul class="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
@@ -180,7 +180,7 @@
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
       <div class="titulo-footer">
-        <img src="./img/bikcraft.svg" alt="">
+        <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
       </div>
       <div class="contatos w">
         <h3 class="font-2-l-b">CONTATO</h3>
@@ -204,7 +204,7 @@
           <li><a href="#" class="c5 font-2-m">Bicicletas</a></li>
           <li><a href="#" class="c5 font-2-m">Seguros</a></li>
           <li><a href="#" class="c5 font-2-m">Contato</a></li>
-          <li><a href="#" class="c5 font-2-m">Termos e Condições</a></li>
+          <li><a href="./termos.html" class="c5 font-2-m">Termos e Condições</a></li>
         </ul>
       </div>
       <div class="copyrigth">
