--- a/termos.html
+++ b/termos.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./estilos/style.css">
-  <title>Termos e Condições/Bikcraft</title>
+  <title>Termos e Condições / Bikcraft</title>
 </head>
 
 <body>
@@ -35,7 +35,7 @@
   </header>
 
   <main>
-    <section class="titulo-termos c11-b">
+    <section class="titulo-termos c11-b" aria-label="termos e condições">
       <div class="conteiner-termos conteiner-base">
         <div class="titulo-page">
           <p class="c5">TERMOS DE USO</p>
