--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <div class="informacoes">
         <h3 class="w font-2-l-b">INFORMAÇÕES</h3>
         <ul>
-          <li><a href="#" class="c5 font-2-m">Bicicletas</a></li>
+          <li><a href="./bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
           <li><a href="#" class="c5 font-2-m">Seguros</a></li>
           <li><a href="#" class="c5 font-2-m">Contato</a></li>
           <li><a href="./termos.html" class="c5 font-2-m">Termos e Condições</a></li>
