--- a/bicicletas.html
+++ b/bicicletas.html
@@ -27,14 +27,14 @@
       <nav aria-label="primaria">
         <ul class="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
-          <li><a href="./seguros.html" class="header-links w">Seguros</a></li>
+          <li><a href="./seguros-page.html" class="header-links w">Seguros</a></li>
           <li><a href="./contato.html" class="header-links w">Contato</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <main>
-    <section class="titulo-termos c11-b">
+    <section class="titulo-termos c11-b" aria-label="titulo da pagina">
       <div class="conteiner-termos conteiner-base">
         <div class="titulo-page">
           <p class="c5">ESCOLHA A MELHOR PARA VOCÊ</p>
@@ -42,7 +42,7 @@
         </div>
       </div>
     </section>
-    <section class="nimbus-stark">
+    <article class="nimbus-stark">
       <div class="conteiner-bikes conteiner-base">
         <div class="bike-foto">
           <img src="./img/bicicletas/nimbus.jpg" alt="Nimbus Stark">
@@ -61,14 +61,14 @@
               <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
             </ul>
             <div class="link-bike">
-              <a href="" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
+              <a href="./nimbus.html" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
             </div>
           </div>
         </div>
       </div>
       </div>
-    </section>
-    <section class="magic-might c11-b">
+    </article>
+    <article class="magic-might">
       <div class="conteiner-bikes conteiner-base">
         <div class="bike-foto">
           <img src="./img/bicicletas/magic.jpg" alt="Magic Might">
@@ -87,14 +87,14 @@
               <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
             </ul>
             <div class="link-bike">
-              <a href="" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
+              <a href="./magic.html" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
             </div>
           </div>
         </div>
       </div>
       </div>
-    </section>
-    <section class="magic-might">
+    </article>
+    <article class="nebular-cosmic">
       <div class="conteiner-bikes conteiner-base">
         <div class="bike-foto">
           <img src="./img/bicicletas/nebula.jpg" alt="Nebula Cosmic">
@@ -113,13 +113,13 @@
               <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
             </ul>
             <div class="link-bike">
-              <a href="" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
+              <a href="./nebular.html" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
             </div>
           </div>
         </div>
       </div>
       </div>
-    </section>
+    </article>
   </main>
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
@@ -145,10 +145,10 @@
       <div class="informacoes">
         <h3 class="w font-2-l-b">INFORMAÇÕES</h3>
         <ul>
-          <li><a href="#" class="c5 font-2-m">Bicicletas</a></li>
-          <li><a href="#" class="c5 font-2-m">Seguros</a></li>
+          <li><a href="./bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
+          <li><a href="./seguros-page.html" class="c5 font-2-m">Seguros</a></li>
           <li><a href="#" class="c5 font-2-m">Contato</a></li>
-          <li><a href="#" class="c5 font-2-m">Termos e Condições</a></li>
+          <li><a href="./termos.html" class="c5 font-2-m">Termos e Condições</a></li>
         </ul>
       </div>
       <div class="copyrigth">
