--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav aria-label="primaria">
         <ul class="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
-          <li><a href="./seguros.html" class="header-links w">Seguros</a></li>
+          <li><a href="./seguros-page.html" class="header-links w">Seguros</a></li>
           <li><a href="./contato.html" class="header-links w">Contato</a></li>
         </ul>
       </nav>
@@ -39,7 +39,7 @@
           <h1 class="w font-1-xxl">Bicicletas feitas
             sob medidas<span class="ponto p1">.</span></h1>
           <p class="font-2-l c5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-          <a href="./biciletas.html" class="btn-bicicletas p5 font-1-m-b">SELECIONE A SUA</a>
+          <a href="./bicicletas.html" class="btn-bicicletas p5 font-1-m-b">SELECIONE A SUA</a>
         </div>
         <div class="img-intro">
           <img src="./img/bicicletas/nimbus-home.jpg" alt="bicileta nimbus eletrica">
@@ -81,7 +81,7 @@
             <span class="c5 font-2-l-b">TECNOLOGIA AVANÇADA</span>
             <h2 class="font-1-xxl w">você escolhe as suas cores e componentes<span class="ponto p1">.</span></h2>
             <p class="c5 font-2-l">Cada Bikcraft é um e possui a sua identidade.<br>As medidas serão exatas para o seu corpo e altura, garantindo maior confroto e ergonomia na sua pedalada. Você pode também personalizar completamente suas cores</p>
-            <a href="" class="link p1">ESCOLHA UM MODELO</a>
+            <a href="./bicicletas.html" class="link p1">ESCOLHA UM MODELO</a>
           </div>
           <div class="tec-vantagens">
             <div class="coluna">
@@ -202,7 +202,7 @@
         <h3 class="w font-2-l-b">INFORMAÇÕES</h3>
         <ul>
           <li><a href="./bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
-          <li><a href="#" class="c5 font-2-m">Seguros</a></li>
+          <li><a href="./seguros-page.html" class="c5 font-2-m">Seguros</a></li>
           <li><a href="#" class="c5 font-2-m">Contato</a></li>
           <li><a href="./termos.html" class="c5 font-2-m">Termos e Condições</a></li>
         </ul>
