--- a/termos.html
+++ b/termos.html
@@ -27,7 +27,7 @@
       <nav aria-label="primaria">
         <ul class="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
-          <li><a href="./seguros.html" class="header-links w">Seguros</a></li>
+          <li><a href="./seguros-page.html" class="header-links w">Seguros</a></li>
           <li><a href="./contato.html" class="header-links w">Contato</a></li>
         </ul>
       </nav>
@@ -118,10 +118,10 @@
       <div class="informacoes">
         <h3 class="w font-2-l-b">INFORMAÇÕES</h3>
         <ul>
-          <li><a href="#" class="c5 font-2-m">Bicicletas</a></li>
-          <li><a href="#" class="c5 font-2-m">Seguros</a></li>
+          <li><a href="./bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
+          <li><a href="./seguros-page.html" class="c5 font-2-m">Seguros</a></li>
           <li><a href="#" class="c5 font-2-m">Contato</a></li>
-          <li><a href="#" class="c5 font-2-m">Termos e Condições</a></li>
+          <li><a href="./termos.html" class="c5 font-2-m">Termos e Condições</a></li>
         </ul>
       </div>
       <div class="copyrigth">
