--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./estilos/style.css">
+  <link rel="stylesheet" href="./estilos-gerais/style.css">
   <title>Bikcraft - Bicicletas Elétricas</title>
 </head>
 
@@ -25,8 +25,8 @@
       <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
       <nav aria-label="primaria">
         <ul class="header-menu">
-          <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
-          <li><a href="./seguros-page.html" class="header-links w">Seguros</a></li>
+          <li><a href="./bicicletas/bicicletas.html" class="header-links w">Bicicletas</a></li>
+          <li><a href="./seguros/seguros-page.html" class="header-links w">Seguros</a></li>
           <li><a href="./contato.html" class="header-links w">Contato</a></li>
         </ul>
       </nav>
@@ -39,7 +39,7 @@
           <h1 class="w font-1-xxl">Bicicletas feitas
             sob medidas<span class="ponto p1">.</span></h1>
           <p class="font-2-l c5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-          <a href="./bicicletas.html" class="btn-bicicletas p5 font-1-m-b">SELECIONE A SUA</a>
+          <a href="./bicicletas/bicicletas.html" class="btn-bicicletas p5 font-1-m-b">SELECIONE A SUA</a>
         </div>
         <div class="img-intro">
           <img src="./img/bicicletas/nimbus-home.jpg" alt="bicileta nimbus eletrica">
@@ -51,24 +51,24 @@
         <h2 class="titulo-modelos font-1-xxl conteiner-base">escolha a sua<span class="ponto p1">.</span></h2>
         <ul class="lista-bikes">
           <li>
-            <a href="" class="c12">
+            <a href="./bicicletas/magic.html" class="c12">
               <img src="./img/bicicletas/magic-home.jpg" alt="">
               <h3 class="nome-bikes">Magic Might</h3>
               <span class="preço-lista c8 font-2-m">R$2499</span>
             </a>
           </li>
           <li>
-            <a href="" class="c12">
+            <a href="./bicicletas/nebular.html" class="c12">
               <img src="./img/bicicletas/nebula-home.jpg" alt="">
-              <h3 class="nome-bikes">Nimbus Stark</h3>
-              <span class="preço-lista c8 font-2-m">R$4999</span>
+              <h3 class="nome-bikes">Nebular Cosmic</h3>
+              <span class="preço-lista c8 font-2-m">R$3999</span>
             </a>
           </li>
           <li>
-            <a href="" class="c12">
+            <a href="./bicicletas/nimbus.html" class="c12">
               <img src="./img/bicicletas/nimbus-home.jpg" alt="">
-              <h3 class="nome-bikes">Nebula Cosmic</h3>
-              <span class="preço-lista c8 font-2-m">R$3999</span>
+              <h3 class="nome-bikes">Nimbus Stark</h3>
+              <span class="preço-lista c8 font-2-m">R$4999</span>
             </a>
           </li>
         </ul>
@@ -81,7 +81,7 @@
             <span class="c5 font-2-l-b">TECNOLOGIA AVANÇADA</span>
             <h2 class="font-1-xxl w">você escolhe as suas cores e componentes<span class="ponto p1">.</span></h2>
             <p class="c5 font-2-l">Cada Bikcraft é um e possui a sua identidade.<br>As medidas serão exatas para o seu corpo e altura, garantindo maior confroto e ergonomia na sua pedalada. Você pode também personalizar completamente suas cores</p>
-            <a href="./bicicletas.html" class="link p1">ESCOLHA UM MODELO</a>
+            <a href="./bicicletas/bicicletas.html" class="link p1">ESCOLHA UM MODELO</a>
           </div>
           <div class="tec-vantagens">
             <div class="coluna">
@@ -147,7 +147,7 @@
               <p>Cobertura estadual</p>
             </li>
           </ul>
-          <a href="" class="c10-b w">INSCREVA-SE</a>
+          <a href="./seguros/seguros-page.html" class="c10-b w">INSCREVA-SE</a>
         </div>
         <div class="card c12-b">
           <h3 class="font-1-p p1">OURO</h3>
@@ -172,7 +172,7 @@
               <p>Acesso ao Clube Bikcraft</p>
             </li>
           </ul>
-          <a href="" class="ouro c12">INSCREVA-SE</a>
+          <a href="./seguros/seguros-page.html" class="ouro c12">INSCREVA-SE</a>
         </div>
       </div>
     </section>
@@ -201,10 +201,10 @@
       <div class="informacoes">
         <h3 class="w font-2-l-b">INFORMAÇÕES</h3>
         <ul>
-          <li><a href="./bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
-          <li><a href="./seguros-page.html" class="c5 font-2-m">Seguros</a></li>
+          <li><a href="./bicicletas/bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
+          <li><a href="./seguros/seguros-page.html" class="c5 font-2-m">Seguros</a></li>
           <li><a href="#" class="c5 font-2-m">Contato</a></li>
-          <li><a href="./termos.html" class="c5 font-2-m">Termos e Condições</a></li>
+          <li><a href="./termos/termos.html" class="c5 font-2-m">Termos e Condições</a></li>
         </ul>
       </div>
       <div class="copyrigth">
