--- a/bicicletas/nebular.html
+++ b/bicicletas/nebular.html
@@ -28,13 +28,13 @@
         <ul class="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
           <li><a href="../seguros/seguros-page.html" class="header-links w">Seguros</a></li>
-          <li><a href="#" class="header-links w">Contato</a></li>
+          <li><a href="../contato/contato.html" class="header-links w">Contato</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <main>
-    <section class="titulo-termos c11-b" aria-label="titulo da pagina">
+    <section class="titulo-bikes c11-b" aria-label="titulo da pagina">
       <div class="conteiner-bike conteiner-base">
         <div class="titulo-page">
           <p class="c5">R$ 3999</p>
@@ -133,10 +133,10 @@
       </div>
       <div class="contatos w">
         <h3 class="font-2-l-b">CONTATO</h3>
-        <div class="contato">
+        <address class="contato">
           <a href="tel:+55 21 9999-9999" class="c5 font-2-m">+55 21 9999-9999</a>
           <a href="mailto:contato@bikcraft.com" class="c5 font-2-m">contato@bikcraft.com</a>
-        </div>
+        </address>
         <div class="endereco c5 font-2-m">
           <p>Rua Ali Perto, 42 - Botafogo</p>
           <p>Rio de Janeiro - RJ</p>
@@ -150,9 +150,9 @@
       <div class="informacoes">
         <h3 class="w font-2-l-b">INFORMAÇÕES</h3>
         <ul>
-          <li><a href="../bicicletas/bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
+          <li><a href="./bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
           <li><a href="../seguros/seguros-page.html" class="c5 font-2-m">Seguros</a></li>
-          <li><a href="#" class="c5 font-2-m">Contato</a></li>
+          <li><a href="../contato/contato.html" class="c5 font-2-m">Contato</a></li>
           <li><a href="../termos/termos.html" class="c5 font-2-m">Termos e Condições</a></li>
         </ul>
       </div>
