--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -52,7 +52,7 @@
         <div class="conteudo-bike">
           <p class="font-2-l c5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <div class="comprar-bike">
-            <a href="" class="btn-bike p5 font-1-m-b">COMPRAR AGORA</a>
+            <a href="../orcamento/orcamento.html" class="btn-bike p5 font-1-m-b">COMPRAR AGORA</a>
             <span class="info-compra c6"><img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
             <span class="info-compra c6"><img src="../img/icones/estoque.svg" alt="">18 em estoque</span>
           </div>
