--- a/contato/contato.html
+++ b/contato/contato.html
@@ -84,6 +84,39 @@
         </div>
       </div>
     </section>
+    <article class="lojas conteiner-base">
+      <h2 class="font-1-xxl c12">lojas locais <span class="ponto p1">.</span></h2>
+      <div class="loja-card">
+        <img src="../img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - RJ">
+        <div class="lojas-conteudos">
+          <h3 class="font-1-xl">Rio De Janeiro</h3>
+          <div class="lojas-dados">
+            <p class="c8">Rua Ali Perto, 25</p>
+            <p class="c8">Rio de Janeiro - RJ</p>
+          </div>
+          <address class="lojas-dados">
+            <a href="mailto:rj@bikcraft.com" class="c8">rj@bikcraft.com</a>
+            <a href="tel:+55 21 9999-9999" class="c8">+55 21 9999-9999</a>
+          </address>
+          <p class="atendimento font-2-s"><img src="../img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        </div>
+      </div>
+      <div class="loja-card">
+        <img src="../img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - SP">
+        <div class="lojas-conteudos">
+          <h3 class="font-1-xl">São Paulo</h3>
+          <div class="lojas-dados">
+            <p class="c8">Rua Ali Perto, 25</p>
+            <p class="c8">São Paulo - SP</p>
+          </div>
+          <address class="lojas-dados">
+            <a href="mailto:sp@bikcraft.com" class="c8">sp@bikcraft.com</a>
+            <a href="tel:+55 11 9999-9999 class=" class="c8">+55 11 9999-9999</a>
+          </address>
+          <p class="atendimento font-2-s"><img src="../img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        </div>
+      </div>
+    </article>
   </main>
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
