Melhoria de performance
Primeiro ajuste na performance do site.

--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A Bikcraft é uma loja de bicicletas que está a mais de 10 anos no mercado vendendo diversos tipos de bicicletas para todos com um preço em conta, visamos ajudar as pessoas a se exercitarem, e manterem a boa saude.">
+  <meta name="author" content="Luís Felipe Estevam">
   <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./estilos-gerais/style.css">
   <title>Bikcraft - Bicicletas Elétricas</title>
 </head>
