--- a/orcamento/orcamento.html
+++ b/orcamento/orcamento.html
@@ -5,17 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e Condições.">
+  <meta name="description" content="Faça seu orçamento e garanta a sua bikcraft">
+  <meta name="author" content="Luís Felipe Estevam">
   <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../estilos-gerais/style.css">
   <title>Orçamento / Bikcraft</title>
 </head>
@@ -60,9 +55,7 @@
             <label for="nimbus">Numbus Stark <span>R$4999</span></label>
             <div class="orcamento-detalhes">
               <ul class="font-1-xs c8">
-                <li>
-                  <img src="../img/icones/eletrica.svg" alt="">Motor Elétrico
-                </li>
+                <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
                 <li><img src="../img/icones/velocidade.svg" alt="">50 km/h</li>
                 <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
                 <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
@@ -73,9 +66,7 @@
             <label for="magic">Magic Migth <span>R$2499</span></label>
             <div class="orcamento-detalhes">
               <ul class="font-1-xs c8">
-                <li>
-                  <img src="../img/icones/eletrica.svg" alt="">Motor Elétrico
-                </li>
+                <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
                 <li><img src="../img/icones/velocidade.svg" alt="">40 km/h</li>
                 <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
                 <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
@@ -86,9 +77,7 @@
             <label for="nebula">Nebula Cosmic <span>R$3999</span></label>
             <div class="orcamento-detalhes">
               <ul class="font-1-xs c8">
-                <li>
-                  <img src="../img/icones/eletrica.svg" alt="">Motor Elétrico
-                </li>
+                <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
                 <li><img src="../img/icones/velocidade.svg" alt="">45 km/h</li>
                 <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
                 <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
