--- a/bicicletas/nebular.html
+++ b/bicicletas/nebular.html
@@ -7,10 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Se você procura um pouco mais de velocidade e rendimento a um preço acessivel a nebular cosmic foi feita para você">
   <meta name="author" content="Luís Felipe Estevam">
-  <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon" width="32" height="32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preload" href="../estilos-gerais/style.css" as="style">
   <link rel="stylesheet" href="../estilos-gerais/style.css">
   <title>Nebular Cosmic / Bikcraft</title>
 </head>
@@ -21,9 +22,9 @@
       <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
       <nav aria-label="primaria">
         <ul class="header-menu">
-          <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
-          <li><a href="../seguros/seguros-page.html" class="header-links w">Seguros</a></li>
-          <li><a href="../contato/contato.html" class="header-links w">Contato</a></li>
+          <li><a href="../bicicletas.html" class="header-links w">Bicicletas</a></li>
+          <li><a href="../seguros-page.html" class="header-links w">Seguros</a></li>
+          <li><a href="../contato.html" class="header-links w">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -40,14 +41,14 @@
     <article class="c11-b intro-bike">
       <div class="conteiner-bike conteiner-base">
         <div class="imagens-bike">
-          <img src="../img/bicicleta/nimbus3.jpg" alt="" class="principal">
-          <img src="../img/bicicleta/nimbus1.jpg" alt="">
-          <img src="../img/bicicleta/nimbus2.jpg" alt="">
+          <img src="../img/bicicleta/nimbus3.jpg" alt="Nebular Cosmic" class="principal">
+          <img src="../img/bicicleta/nimbus1.jpg" alt="Nimbus Stark">
+          <img src="../img/bicicleta/nimbus2.jpg" alt="Magic Migth">
         </div>
         <div class="conteudo-bike">
           <p class="font-2-l c5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <div class="comprar-bike">
-            <a href="../orcamento/orcamento.html" class="btn-bike p5 font-1-m-b">COMPRAR AGORA</a>
+            <a href="../orcamento.html?tipo=bikcraft&produto=nebula" class="btn-bike p5 font-1-m-b">COMPRAR AGORA</a>
             <span class="info-compra c6"><img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
             <span class="info-compra c6"><img src="../img/icones/estoque.svg" alt="">18 em estoque</span>
           </div>
@@ -116,7 +117,7 @@
         <div class="conteudo-seguro-ap">
           <h2 class="w font-1-xxl">Pedale mais tranquilo com o nosso <span class=" font-1-xxl p1">seguro</span><span class="ponto p1">.</span></h2>
           <p class="c6">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
-          <a href="../seguros/seguros-page.html" class="btn-bike p5 font-1-m-b">CONHEÇA MAIS</a>
+          <a href="../seguros-page.html" class="btn-bike p5 font-1-m-b">CONHEÇA MAIS</a>
         </div>
       </div>
     </article>
@@ -145,10 +146,10 @@
       <div class="informacoes">
         <h3 class="w font-2-l-b">INFORMAÇÕES</h3>
         <ul>
-          <li><a href="./bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
-          <li><a href="../seguros/seguros-page.html" class="c5 font-2-m">Seguros</a></li>
-          <li><a href="../contato/contato.html" class="c5 font-2-m">Contato</a></li>
-          <li><a href="../termos/termos.html" class="c5 font-2-m">Termos e Condições</a></li>
+          <li><a href="../bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
+          <li><a href="../seguros-page.html" class="c5 font-2-m">Seguros</a></li>
+          <li><a href="../contato.html" class="c5 font-2-m">Contato</a></li>
+          <li><a href="../termos.html" class="c5 font-2-m">Termos e Condições</a></li>
         </ul>
       </div>
       <div class="copyrigth">
@@ -156,4 +157,5 @@
       </div>
     </div>
   </footer>
+  <script src="../script/script.js"></script>
 </body>
