--- a/bicicletas.html
+++ b/bicicletas.html
@@ -5,27 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e Condições.">
-  <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
+  <meta name="description" content="Nessa pagina você todos os modelos de bicicletas prontas que nos oferecemos">
+  <meta name="author" content="Luís Felipe Estevam">
+  <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon" width="32" height="32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./estilos/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preload" href="../estilos-gerais/style.css" as="style">
+  <link rel="stylesheet" href="../estilos-gerais/style.css">
   <title>Bicicletas / Bikcraft</title>
 </head>
 
 <body>
   <header class="header c12-b">
     <div class="header-conteiner conteiner-base">
-      <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
+      <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu" id="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
           <li><a href="./seguros-page.html" class="header-links w">Seguros</a></li>
           <li><a href="./contato.html" class="header-links w">Contato</a></li>
@@ -43,9 +39,9 @@
       </div>
     </section>
     <article class="nimbus-stark">
-      <div class="conteiner-bikes conteiner-base">
+      <div class="conteiner-bikes conteiner-base fadeInLeft" data-anime="200">
         <div class="bike-foto">
-          <img src="./img/bicicletas/nimbus.jpg" alt="Nimbus Stark">
+          <img src="../img/bicicletas/nimbus.jpg" alt="Nimbus Stark">
           <span class="preco font-2-m">R$4999</span>
         </div>
         <div class="content-bikes">
@@ -55,13 +51,13 @@
           </div>
           <div class="vantagens">
             <ul class="lista-vatagens">
-              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-              <li><img src="./img/icones/velocidade.svg" alt="">40 km/h</li>
-              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="../img/icones/velocidade.svg" alt="">50 km/h</li>
+              <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
             </ul>
             <div class="link-bike">
-              <a href="./nimbus.html" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
+              <a href="./bicicletas/nimbus.html" class="p5 font-1-m-b">MAIS SOBRE <img src="../img/icones/seta.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -69,9 +65,9 @@
       </div>
     </article>
     <article class="magic-might">
-      <div class="conteiner-bikes conteiner-base">
+      <div class="conteiner-bikes conteiner-base fadeInRight" data-anime="200">
         <div class="bike-foto">
-          <img src="./img/bicicletas/magic.jpg" alt="Magic Might">
+          <img src="../img/bicicletas/magic.jpg" alt="Magic Might">
           <span class="preco font-2-m">R$2499</span>
         </div>
         <div class="content-bikes">
@@ -81,13 +77,13 @@
           </div>
           <div class="vantagens">
             <ul class="lista-vatagens c5">
-              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-              <li><img src="./img/icones/velocidade.svg" alt="">40 km/h</li>
-              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="../img/icones/velocidade.svg" alt="">40 km/h</li>
+              <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
             </ul>
             <div class="link-bike">
-              <a href="./magic.html" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
+              <a href="./bicicletas/magic.html" class="p5 font-1-m-b">MAIS SOBRE <img src="../img/icones/seta.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -95,9 +91,9 @@
       </div>
     </article>
     <article class="nebular-cosmic">
-      <div class="conteiner-bikes conteiner-base">
+      <div class="conteiner-bikes conteiner-base fadeInLeft" data-anime="200">
         <div class="bike-foto">
-          <img src="./img/bicicletas/nebula.jpg" alt="Nebula Cosmic">
+          <img src="../img/bicicletas/nebula.jpg" alt="Nebula Cosmic">
           <span class="preco font-2-m">R$3999</span>
         </div>
         <div class="content-bikes">
@@ -107,13 +103,13 @@
           </div>
           <div class="vantagens">
             <ul class="lista-vatagens">
-              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-              <li><img src="./img/icones/velocidade.svg" alt="">40 km/h</li>
-              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="../img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="../img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="../img/icones/velocidade.svg" alt="">45 km/h</li>
+              <li><img src="../img/icones/rastreador.svg" alt="">Rastreador</li>
             </ul>
             <div class="link-bike">
-              <a href="./nebular.html" class="p5 font-1-m-b">MAIS SOBRE <img src="./img/icones/seta.svg" alt=""></a>
+              <a href="./bicicletas/nebular.html" class="p5 font-1-m-b">MAIS SOBRE <img src="../img/icones/seta.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -124,22 +120,22 @@
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
       <div class="titulo-footer">
-        <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
+        <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
       </div>
       <div class="contatos w">
         <h3 class="font-2-l-b">CONTATO</h3>
-        <div class="contato">
+        <address class="contato">
           <a href="tel:+55 21 9999-9999" class="c5 font-2-m">+55 21 9999-9999</a>
           <a href="mailto:contato@bikcraft.com" class="c5 font-2-m">contato@bikcraft.com</a>
-        </div>
+        </address>
         <div class="endereco c5 font-2-m">
           <p>Rua Ali Perto, 42 - Botafogo</p>
           <p>Rio de Janeiro - RJ</p>
         </div>
         <div class="social">
-          <a href="#" title="instagram"><img src="./img/redes/instagram.svg" alt=""></a>
-          <a href="#" title="facebook"><img src="./img/redes/facebook.svg" alt=""></a>
-          <a href="#" title="youtube"><img src="./img/redes/youtube.svg" alt=""></a>
+          <a href="#" title="instagram"><img src="../img/redes/instagram.svg" alt=""></a>
+          <a href="#" title="facebook"><img src="../img/redes/facebook.svg" alt=""></a>
+          <a href="#" title="youtube"><img src="../img/redes/youtube.svg" alt=""></a>
         </div>
       </div>
       <div class="informacoes">
@@ -147,7 +143,7 @@
         <ul>
           <li><a href="./bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
           <li><a href="./seguros-page.html" class="c5 font-2-m">Seguros</a></li>
-          <li><a href="#" class="c5 font-2-m">Contato</a></li>
+          <li><a href="./contato.html" class="c5 font-2-m">Contato</a></li>
           <li><a href="./termos.html" class="c5 font-2-m">Termos e Condições</a></li>
         </ul>
       </div>
@@ -156,6 +152,8 @@
       </div>
     </div>
   </footer>
+  <script src="./script/plugins/plugins.js"></script>
+  <script src="./script/script.js"></script>
 </body>
 
 </html>
