--- a/seguros-page.html
+++ b/seguros-page.html
@@ -5,27 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e Condições.">
-  <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
+  <meta name="description" content="As melhores condições para sua segurança">
+  <meta name="author" content="Luís Felipe Estevam">
+  <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon" width="32" height="32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./estilos/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preload" href="../estilos-gerais/style.css" as="style">
+  <link rel="stylesheet" href="../estilos-gerais/style.css">
   <title>Seguros / Bikcraft</title>
 </head>
 
 <body>
   <header class="header c12-b">
     <div class="header-conteiner conteiner-base">
-      <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
+      <a href="../index.html"><img src="../img/bikcraft.svg" alt="logo marca" width="136" height="32"></a>
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu" id="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
           <li><a href="./seguros-page.html" class="header-links w">Seguros</a></li>
           <li><a href="./contato.html" class="header-links w">Contato</a></li>
@@ -34,7 +30,7 @@
     </div>
   </header>
   <main>
-    <section class="titulo-termos c11-b" aria-label="titulo da pagina">
+    <section class="titulo-seguros c11-b" aria-label="titulo da pagina">
       <div class="conteiner-termos conteiner-base">
         <div class="titulo-page">
           <p class="c5">ESCOLHA O SEGURO</p>
@@ -48,45 +44,45 @@
           <h3 class="font-1-p c6">PRATA</h3>
           <span class="font-1-xl w">R$ 199<span class="font-1-xs c6">mensal</span></span>
           <ul class="lista-vantagens">
-            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
               <p>Duas trocas por ano</p>
             </li>
-            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
               <p>Assistência técnica</p>
             </li>
-            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
               <p>Suporte 08h às 18h</p>
             </li>
-            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
               <p>Cobertura estadual</p>
             </li>
           </ul>
-          <a href="" class="c10-b w">INSCREVA-SE</a>
+          <a href="./orcamento.html?tipo=seguro&produto=prata" class="c10-b w">INSCREVA-SE</a>
         </div>
         <div class="card c12-b">
           <h3 class="font-1-p p1">OURO</h3>
           <span class="font-1-xl w">R$ 299<span class="font-1-xs c6">mensal</span></span>
           <ul class="lista-vantagens">
-            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
               <p>Cinco trocas por ano</p>
             </li>
-            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
               <p>Assistência especial</p>
             </li>
-            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
               <p>Suporte 24h</p>
             </li>
-            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
               <p>Cobertura nacional</p>
             </li>
-            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
               <p>Desconto em parceiros</p>
             </li>
-            <li class="font-2-m w"><img src="./img/icones/lista.svg" alt="">
+            <li class="font-2-m w fadeInLeft" data-anime="200"><img src="../img/icones/lista.svg" alt="" width="13" height="9">
               <p>Acesso ao Clube Bikcraft</p>
             </li>
           </ul>
-          <a href="" class="ouro c12">INSCREVA-SE</a>
+          <a href="./orcamento.html?tipo=seguro&produto=ouro" class="ouro c12">INSCREVA-SE</a>
         </div>
       </div>
     </section>
@@ -97,42 +93,42 @@
           <ul class="lista-cards">
             <li>
               <div class="card-seguro-page">
-                <img src="./img/icones/eletrica.svg" alt="">
+                <img src="../img/icones/eletrica.svg" alt="">
                 <h3 class="w">Reparo Elétrico</h3>
                 <p class="c5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
               </div>
             </li>
             <li>
               <div class="card-seguro-page">
-                <img src="./img/icones/carbono.svg" alt="">
+                <img src="../img/icones/carbono.svg" alt="">
                 <h3 class="w">Reparo Elétrico</h3>
                 <p class="c5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
               </div>
             </li>
             <li>
               <div class="card-seguro-page">
-                <img src="./img/icones/sustentavel.svg" alt="">
+                <img src="../img/icones/sustentavel.svg" alt="">
                 <h3 class="w">Sustentável</h3>
                 <p class="c5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
               </div>
             </li>
             <li>
               <div class="card-seguro-page">
-                <img src="./img/icones/rastreador.svg" alt="">
+                <img src="../img/icones/rastreador.svg" alt="">
                 <h3 class="w">Recuperação</h3>
                 <p class="c5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
               </div>
             </li>
             <li>
               <div class="card-seguro-page">
-                <img src="./img/icones/seguro.svg" alt="">
+                <img src="../img/icones/seguro.svg" alt="">
                 <h3 class="w">Segurança</h3>
                 <p class="c5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
               </div>
             </li>
             <li>
               <div class="card-seguro-page">
-                <img src="./img/icones/velocidade.svg" alt="">
+                <img src="../img/icones/velocidade.svg" alt="">
                 <h3 class="w">Rapidez</h3>
                 <p class="c5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
               </div>
@@ -143,85 +139,55 @@
     </article>
     <section class="perguntas">
       <div class="conteiner-perguntas conteiner-base">
-        <h1 class="c12 font-1-xxl titulo-perguntas">peguntas frequentes<span class="ponto p1">.</span></h1>
-        <ul class="cards-perguntas">
-          <li>
-            <div class="texto-perguntas">
-              <h3 class="font-1-m-b">Qual forma de pagamento vocês aceitam?</h1>
-                <p class="font-2-m c9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-            </div>
-            <div class="seta-abrir">
-              <img src="./img/icones/seta-abrir.svg" alt="">
-            </div>
-          </li>
-          <li>
-            <div class="texto-perguntas">
-              <h3 class="font-1-m-b">Como posso entrar em contato?</h1>
-                <p class="font-2-m c9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-            </div>
-            <div class="seta-abrir">
-              <img src="./img/icones/seta-abrir.svg" alt="">
-            </div>
-          </li>
-          <li>
-            <div class="texto-perguntas">
-              <h3 class="font-1-m-b">Vocês possuem algum desconto?</h1>
-                <p class="font-2-m c9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-            </div>
-            <div class="seta-abrir">
-              <img src="./img/icones/seta-abrir.svg" alt="">
-            </div>
-          </li>
-          <li>
-            <div class="texto-perguntas">
-              <h3 class="font-1-m-b">Qual a garantia que possuo?</h1>
-                <p class="font-2-m c9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-            </div>
-            <div class="seta-abrir">
-              <img src="./img/icones/seta-abrir.svg" alt="">
-            </div>
-          </li>
-          <li>
-            <div class="texto-perguntas">
-              <h3 class="font-1-m-b">Posso parcelar no boleto?</h1>
-                <p class="font-2-m c9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-            </div>
-            <div class="seta-abrir">
-              <img src="./img/icones/seta-abrir.svg" alt="">
-            </div>
-          </li>
-          <li>
-            <div class="texto-perguntas">
-              <h3 class="font-1-m-b">Quantas trocas posso fazer ao ano?</h1>
-                <p class="font-2-m c9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-            </div>
-            <div class="seta-abrir">
-              <img src="./img/icones/seta-abrir.svg" alt="">
-            </div>
-          </li>
-        </ul>
+        <h2 class="c12 font-1-xxl titulo-perguntas">peguntas frequentes<span class="ponto p1">.</span></h2>
+        <dl class="cards-perguntas">
+          <div class="texto-perguntas">
+            <dt><button class="font-1-m-b" aria-expanded="true" aria-controls="pergunta1">Qual forma de pagamento vocês aceitam?</button></dt>
+            <dd class="font-2-m c9 ativa" id="pergunta1">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          </div>
+          <div class="texto-perguntas">
+            <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta2">Como posso entrar em contato?</button></dt>
+            <dd class="font-2-m c9" id="pergunta2">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          </div>
+          <div class="texto-perguntas">
+            <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta3">Vocês possuem algum desconto?</button></dt>
+            <dd class="font-2-m c9" id="pergunta3">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          </div>
+          <div class="texto-perguntas">
+            <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta4">Qual a garantia que possuo?</button></dt>
+            <dd class="font-2-m c9" id="pergunta4">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          </div>
+          <div class="texto-perguntas">
+            <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta5">Posso parcelar no boleto?</button></dt>
+            <dd class="font-2-m c9" id="pergunta5">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          </div>
+          <div class="texto-perguntas">
+            <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta6">Quantas trocas posso fazer ao ano?</button></dt>
+            <dd class="font-2-m c9" id="pergunta6">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          </div>
+        </dl>
       </div>
     </section>
   </main>
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
       <div class="titulo-footer">
-        <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
+        <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
       </div>
       <div class="contatos w">
         <h3 class="font-2-l-b">CONTATO</h3>
-        <div class="contato">
+        <address class="contato">
           <a href="tel:+55 21 9999-9999" class="c5 font-2-m">+55 21 9999-9999</a>
           <a href="mailto:contato@bikcraft.com" class="c5 font-2-m">contato@bikcraft.com</a>
-        </div>
+        </address>
         <div class="endereco c5 font-2-m">
           <p>Rua Ali Perto, 42 - Botafogo</p>
           <p>Rio de Janeiro - RJ</p>
         </div>
         <div class="social">
-          <a href="#" title="instagram"><img src="./img/redes/instagram.svg" alt=""></a>
-          <a href="#" title="facebook"><img src="./img/redes/facebook.svg" alt=""></a>
-          <a href="#" title="youtube"><img src="./img/redes/youtube.svg" alt=""></a>
+          <a href="#" title="instagram"><img src="../img/redes/instagram.svg" alt=""></a>
+          <a href="#" title="facebook"><img src="../img/redes/facebook.svg" alt=""></a>
+          <a href="#" title="youtube"><img src="../img/redes/youtube.svg" alt=""></a>
         </div>
       </div>
       <div class="informacoes">
@@ -229,7 +195,7 @@
         <ul>
           <li><a href="./bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
           <li><a href="./seguros-page.html" class="c5 font-2-m">Seguros</a></li>
-          <li><a href="#" class="c5 font-2-m">Contato</a></li>
+          <li><a href="./contato.html" class="c5 font-2-m">Contato</a></li>
           <li><a href="./termos.html" class="c5 font-2-m">Termos e Condições</a></li>
         </ul>
       </div>
@@ -238,6 +204,8 @@
       </div>
     </div>
   </footer>
+  <script src="./script/plugins/plugins.js"></script>
+  <script src="./script/script.js"></script>
 </body>
 
 </html>
