--- a/termos.html
+++ b/termos.html
@@ -5,27 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e Condições.">
-  <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
+  <meta name="description" content="Termos e condições da bikcraft">
+  <meta name="author" content="Luís Felipe Estevam">
+  <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon" width="32" height="32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./estilos/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preload" href="../estilos-gerais/style.css" as="style">
+  <link rel="stylesheet" href="../estilos-gerais/style.css">
   <title>Termos e Condições / Bikcraft</title>
 </head>
 
 <body>
   <header class="header c12-b">
     <div class="header-conteiner conteiner-base">
-      <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
+      <a href="../index.html"><img src="../img/bikcraft.svg" alt="logo marca" width="136" height="32"></a>
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu" id="header-menu">
           <li><a href="./bicicletas.html" class="header-links w">Bicicletas</a></li>
           <li><a href="./seguros-page.html" class="header-links w">Seguros</a></li>
           <li><a href="./contato.html" class="header-links w">Contato</a></li>
@@ -97,22 +93,22 @@
   <footer class="footer">
     <div class="conteiner-footer conteiner-base">
       <div class="titulo-footer">
-        <a href="./index.html"><img src="./img/bikcraft.svg" alt="bicicleta nimbus"></a>
+        <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus" width="32" height="32"></a>
       </div>
       <div class="contatos w">
         <h3 class="font-2-l-b">CONTATO</h3>
-        <div class="contato">
+        <address class="contato">
           <a href="tel:+55 21 9999-9999" class="c5 font-2-m">+55 21 9999-9999</a>
           <a href="mailto:contato@bikcraft.com" class="c5 font-2-m">contato@bikcraft.com</a>
-        </div>
+        </address>
         <div class="endereco c5 font-2-m">
           <p>Rua Ali Perto, 42 - Botafogo</p>
           <p>Rio de Janeiro - RJ</p>
         </div>
         <div class="social">
-          <a href="#" title="instagram"><img src="./img/redes/instagram.svg" alt=""></a>
-          <a href="#" title="facebook"><img src="./img/redes/facebook.svg" alt=""></a>
-          <a href="#" title="youtube"><img src="./img/redes/youtube.svg" alt=""></a>
+          <a href="#" title="instagram"><img src="../img/redes/instagram.svg" alt="" width="32" height="32"></a>
+          <a href="#" title="facebook"><img src="../img/redes/facebook.svg" alt="" width="32" height="32"></a>
+          <a href="#" title="youtube"><img src="../img/redes/youtube.svg" alt="" width="32" height="32"></a>
         </div>
       </div>
       <div class="informacoes">
@@ -120,7 +116,7 @@
         <ul>
           <li><a href="./bicicletas.html" class="c5 font-2-m">Bicicletas</a></li>
           <li><a href="./seguros-page.html" class="c5 font-2-m">Seguros</a></li>
-          <li><a href="#" class="c5 font-2-m">Contato</a></li>
+          <li><a href="./contato.html" class="c5 font-2-m">Contato</a></li>
           <li><a href="./termos.html" class="c5 font-2-m">Termos e Condições</a></li>
         </ul>
       </div>
@@ -129,6 +125,7 @@
       </div>
     </div>
   </footer>
+  <script src="./script/script.js"></script>
 </body>
 
 </html>
