--- a/bicicletas.html
+++ b/bicicletas.html
@@ -11,13 +11,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="preload" href="../estilos-gerais/style.css" as="style">
-  <link rel="stylesheet" href="../estilos-gerais/style.css">
+  <link rel="preload" href="./estilos-gerais/style.css" as="style">
+  <link rel="stylesheet" href="./estilos-gerais/style.css">
   <title>Bicicletas / Bikcraft</title>
 </head>
 
 <body>
-  <header class="header c12-b">
+  <header class=" header c12-b">
     <div class="header-conteiner conteiner-base">
       <a href="../index.html"><img src="../img/bikcraft.svg" alt="bicicleta nimbus"></a>
       <nav aria-label="primaria">
