--- a/bicicletas/nebular.html
+++ b/bicicletas/nebular.html
@@ -7,13 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Se você procura um pouco mais de velocidade e rendimento a um preço acessivel a nebular cosmic foi feita para você">
   <meta name="author" content="Luís Felipe Estevam">
-  <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon" width="32" height="32">
+  <link rel="shortcut icon" href="../img/favicon.svg" type="image/svg+xml" width="32" height="32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="preload" href="../estilos-gerais/style.css" as="style">
   <link rel="stylesheet" href="../estilos-gerais/style.css">
   <title>Nebular Cosmic / Bikcraft</title>
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
