--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A Bikcraft é uma loja de bicicletas que está a mais de 10 anos no mercado vendendo diversos tipos de bicicletas para todos com um preço em conta, visamos ajudar as pessoas a se exercitarem, e manterem a boa saude.">
   <meta name="author" content="Luís Felipe Estevam">
-  <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon" width="32" height="32">
+  <link rel="shortcut icon" href="./img/favicon.svg" type="image/svg+xml" width="32" height="32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="preload" href="./estilos-gerais/style.css" as="style">
   <link rel="stylesheet" href="./estilos-gerais/style.css">
   <title>Bikcraft - Bicicletas Elétricas</title>
+
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
